dotfiles/.xmonad/xmonad.errors

xmonad.hs:113:45: error:
    Not in scope: ‘ntoaster’
    Perhaps you meant ‘nmaster’ (imported from XMonad.Layout.MouseResizableTile)
    |
113 |                                           , ntoaster = 10
    |                                             ^^^^^^^^
